--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -322,39 +322,39 @@
     "ERROR_27": "Minimalni iznos: 0.01. Maksimalni iznos: ",
     "ERROR_28": "Trebate ovu `Keystore datoteku + lozinku` ili `Private Key` (sljedeća stranica) kako biste ubuduće pristupili ovom novčaniku.  ",
     "ERROR_29": "Molimo unesite valjano korisničko ime i lozinku. ",
-    "ERROR_30": "Molimo unesite valjano ime (7+ characters, limited punctuation) ",
-    "ERROR_31": "Please enter a valid secret phrase. ",
-    "ERROR_32": "Could not connect to the node. Refresh your page, try a different node (upper right corner), check your firewall settings. If custom node, check your configs.",
-    "ERROR_33": "The wallet you have unlocked does not match the owner's address. ",
-    "ERROR_34": "The name you are attempting to reveal does not match the name you have entered. ",
-    "ERROR_35": "Input address is not checksummed. <a href=\"https://support.mycrypto.com/topics/not-checksummed-shows-when-i-enter-an-address\" target=\"_blank\" rel=\"noopener\"> More info</a>",
-    "ERROR_36": "Enter valid TX hash",
-    "ERROR_37": "Enter valid hex string (0-9, a-f)",
-    "SUCCESS_1": "Valid address ",
-    "SUCCESS_2": "Wallet successfully decrypted ",
-    "SUCCESS_3": "Your TX has been broadcast to the network. It is waiting to be mined & confirmed. During ICOs, it may take 3+ hours to confirm. Use the Verify & Check buttons below to see. TX Hash:  ",
-    "SUCCESS_4": "Your wallet was successfully added ",
-    "SUCCESS_5": "File Selected ",
-    "SUCCESS_6": "You are successfully connected ",
-    "SUCCESS_7": "Message Signature Verified",
-    "WARN_Send_Link": "You arrived via a link that has the address, value, gas, data fields, or transaction type (send mode) filled in for you. You can change any information before sending. Unlock your wallet to get started. ",
-    "GETH_InvalidSender": "Invalid sender ",
-    "GETH_Nonce": "Nonce too low ",
-    "GETH_Cheap": "Gas price too low for acceptance ",
-    "GETH_Balance": "Insufficient balance ",
-    "GETH_NonExistentAccount": "Account does not exist or account balance too low ",
-    "GETH_InsufficientFunds": "Insufficient funds for gas * price + value ",
-    "GETH_IntrinsicGas": "Intrinsic gas too low ",
-    "GETH_GasLimit": "Exceeds block gas limit ",
-    "GETH_NegativeValue": "Negative value ",
-    "PARITY_AlreadyImported": "Transaction with the same hash was already imported.",
-    "PARITY_Old": "Transaction nonce is too low. Try incrementing the nonce.",
-    "PARITY_TooCheapToReplace": "Transaction fee is too low. There is another transaction with same nonce in the queue. Try increasing the fee or incrementing the nonce.",
-    "PARITY_LimitReached": "There are too many transactions in the queue. Your transaction was dropped due to limit. Try increasing the fee.",
-    "PARITY_InsufficientGasPrice": "Transaction fee is too low. It does not satisfy your node's minimal fee (minimal: {}, got: {}). Try increasing the fee.",
-    "PARITY_InsufficientBalance": "Insufficient funds. Account you try to send transaction from does not have enough funds. Required {} wei and got: {} wei.",
-    "PARITY_GasLimitExceeded": "Transaction cost exceeds current gas limit. Limit: {}, got: {}. Try decreasing supplied gas.",
-    "PARITY_InvalidGasLimit": "Supplied gas is beyond limit.",
+    "ERROR_30": "Molimo unesite valjano ime (7 ili više znakova, ograničena interpunkcija) ",
+    "ERROR_31": "Molimo unesite valjanu tajnu frazu. ",
+    "ERROR_32": "Nije moguće spajanje sa čvorom. Osvježi stranicu, pokušaj drugi čvor (gornji desni ugao), provjeri postavke firewalla. Ako je čvor konfiguriran od strane korisnika, provjerite postavke.",
+    "ERROR_33": "Nočanik kojega ste otključali ne odgovara adresi vlasnika. ",
+    "ERROR_34": "Ime koje pokušavate prikazati ne odgovara imenu kojega ste unijeli. ",
+    "ERROR_35": "Unesena adresa nije prošla kontrolno zbrajanje. <a href=\"https://support.mycrypto.com/topics/not-checksummed-shows-when-i-enter-an-address\" target=\"_blank\" rel=\"noopener\"> More info</a>",
+    "ERROR_36": "Unesite valjani TX ključ",
+    "ERROR_37": "Unesite valjani hex niz (0-9, a-f)",
+    "SUCCESS_1": "Valjana adresa ",
+    "SUCCESS_2": "Novčanik je uspješno dekriptiran ",
+    "SUCCESS_3": "Vaš TX je uspješno objavljen mreži. Čeka na obradu i potvrđivanje. Za vrijeme ICOa, može potrajati i više od 3 sata do potvrde. Upotrijebite Verify & Check gumbe ispod da biste vidjeli. TX Hash:  ",
+    "SUCCESS_4": "Vaš novčanik je uspješno dodan ",
+    "SUCCESS_5": "Datoteka je izabrana ",
+    "SUCCESS_6": "Uspješno ste spojeni ",
+    "SUCCESS_7": "Potpis poruke je verificiran",
+    "WARN_Send_Link": "Došli ste ovamo preko poveznice koja sadržava adresu, vrijednost, gas, polja podataka, ili tip transakcije (send mode) već unaprijed uneseno. Možete promijeniti bilokoju informaciju prije slanja. Otključjte novčanik kako biste počeli. ",
+    "GETH_InvalidSender": "Neispravan pošiljatelj ",
+    "GETH_Nonce": "Privremeni broj prenizak ",
+    "GETH_Cheap": "Cijena gasa je neprihvatljivo niska. ",
+    "GETH_Balance": "Nedovoljno sredstava",
+    "GETH_NonExistentAccount": "Korisnički račun ne postoji ili je nedovoljno sredstava ",
+    "GETH_InsufficientFunds": "Nedovoljno sredstava za gas * cijena + vrijednost ",
+    "GETH_IntrinsicGas": "Postavljeni gas prenizak",
+    "GETH_GasLimit": "Prelazi granicu gasa u bloku ",
+    "GETH_NegativeValue": "Negativna vrijednost ",
+    "PARITY_AlreadyImported": "Transakcija sa istovjetnim ključem je već unesena.",
+    "PARITY_Old": "Transakcijski privremeni broj je prenizak. Pokušajte uvećati privremeni broj.",
+    "PARITY_TooCheapToReplace": "Transakcijska naknada je preniska. Postoji još jedna transakcija sa istim ključem u redu čekanja. Pokušajte povećati naknadu ili povećajte privremeni broj.",
+    "PARITY_LimitReached": "Previše je transakcija u redu čekanja.Vaša transakcija je odbačena zbog limita. Pokušajte povećati naknadu.",
+    "PARITY_InsufficientGasPrice": "Transakcijska naknada je preniska. Ne zadovoljava minimalnu naknadu vašeg čvora (minimal: {}, sada: {}). Pokušajte povećati naknadu.",
+    "PARITY_InsufficientBalance": "Nedovoljno sredstava. Korisnički račun sa kojega pokušavate poslati nema dovoljno sredstava. Potrebno {} wei and got: {} wei.",
+    "PARITY_GasLimitExceeded": "Troškovi transakcije prelaze trenutni gas limit. Limit: {}, got: {}. Pokušajte smanjiti isporučeni gas.",
+    "PARITY_InvalidGasLimit": "Isporučeni gas je iznad limita.",
     "translate_version": "0.5 ",
     "Translator_Desc": " ",
     "TranslatorName_1": " ",
@@ -367,25 +367,25 @@
     "TranslatorAddr_4": " ",
     "TranslatorName_5": " ",
     "TranslatorAddr_5": " ",
-    "HELP_Warning": "If you created a wallet -or- downloaded the repo before **Dec. 31st, 2015**, please check your wallets &amp; download a new version of the repo. Click for details. ",
-    "HELP_Desc": "Do you see something missing? Have another question? [Get in touch with us](mailto:support@mycrypto.com), and we will not only answer your question, we will update this page to be more useful to people in the future! ",
-    "HELP_Remind_Title": "Some reminders ",
-    "HELP_Remind_Desc_1": "**Ethereum, MyCrypto.com & MyCrypto CX, and some of the underlying Javascript libraries we use are under active development.** While we have thoroughly tested & tens of thousands of wallets have been successfully created by people all over the globe, there is always the remote possibility that something unexpected happens that causes your ETH to be lost. Please do not invest more than you are willing to lose, and please be careful. If something were to happen, we are sorry, but **we are not responsible for the lost Ether**. ",
-    "HELP_Remind_Desc_2": "MyCrypto.com & MyCrypto CX are not \"web wallets\". You do not create an account or give us your Ether to hold onto. All data never leaves your computer/your browser. We make it easy for you to create, save, and access your information and interact with the blockchain. ",
-    "HELP_Remind_Desc_3": "If you do not save your private key & password, there is no way to recover access to your wallet or the funds it holds.  Back them up in multiple physical locations &ndash; not just on your computer! ",
-    "HELP_0_Title": "0) I'm new. What do I do? ",
-    "HELP_0_Desc_1": "MyCrypto gives you the ability to generate new wallets so you can store your Ether yourself, not on an exchange. This process happens entirely on your computer, not our servers. Therefore, when you generate a new wallet, **you are responsible for safely backing it up**. ",
-    "HELP_0_Desc_2": "Create a new wallet. ",
-    "HELP_0_Desc_3": "Back the wallet up. ",
-    "HELP_0_Desc_4": "Verify you have access to this new wallet and have correctly saved all necessary information. ",
-    "HELP_0_Desc_5": "Transfer Ether to this new wallet. ",
-    "HELP_1_Title": "1) How do I create a new wallet? ",
-    "HELP_1_Desc_1": "Go to the \"Generate Wallet\" page. ",
-    "HELP_1_Desc_2": "Go to the \"Add Wallet\" page & select \"Generate New Wallet\" ",
-    "HELP_1_Desc_3": "Enter a strong password. If you think you may forget it, save it somewhere safe. You will need this password to send transactions. ",
-    "HELP_1_Desc_4": "Click \"GENERATE\". ",
-    "HELP_1_Desc_5": "Your wallet has now been generated. ",
-    "HELP_2a_Title": "How do I save/backup my wallet? ",
+    "HELP_Warning": "Ako ste napravili novčanik ili preuzeli repo prije **Dec. 31st, 2015**, molimo provjerite vaš novčanik &amp; preuzmite novu verziju repo-a. Click for detailsKliknite za više detalja. ",
+    "HELP_Desc": "Vidite li da nešto nedostaje? Imate dodatnih pitanja? [kontaktirajte nas](mailto:support@mycrypto.com), a mi ćemo ne samo odgovoriti na vaše pitanje nego i nadopuniti ovu stranicu kako bi bila od koristi ljudima ubuduće! ",
+    "HELP_Remind_Title": "Neki podsjetnici ",
+    "HELP_Remind_Desc_1": "**Ethereum, MyCrypto.com & MyCrypto CX, i neke Javascript biblioteke koje koristimo pri aktivnom razvoju.** Mi smo mnoge temeljito testirali i deseci tisuća novčanika je do sada uspješno izrađeno od strane ljudi iz cijeloga svijeta , uvijek postoji mala mogućnost da se nešto nepredviđeno dogodi i da ostanete bez svojih ETHa. Molimo ne ulažite više nego što ste spremni izgubiti, i molim vas budite oprezni. Žao nam je ako se išta dogodi, ali **mi nismo odgovorni za izgubljeni Ether**. ",
+    "HELP_Remind_Desc_2": "MyCrypto.com & MyCrypto CX nisu \"web novčanici\". Vi ne radite svoj korisnički račun niti nam dajete svoj Ether u posjed. Svi podaci nikada ne napuštaju vaše računalo/vaš preglednik. Mi vam olakšavamo da izradite, čuvate, i pristupite vašim informacijama i vršite interakciju sa blockchainom. ",
+    "HELP_Remind_Desc_3": "Ako ne sačuvate svoj privatni ključ i lozinku, ne postoji način da obnovite pristup vašem novčaniku i sredstvima koja su u njemu. Izradite sigurnosne kopije na više fizičkih lokacija &ndash; a ne samo na vašem računalu! ",
+    "HELP_0_Title": "0) Ja sam novi. Što da radim?? ",
+    "HELP_0_Desc_1": "MyCrypto vam pruža mogućnost da izradite nove novčanike kako biste sami pohranili vaš Ether, a ne na mjenjačnicama. Ovaj se proces u potpunosti odvija na vašem računalu a ne na našim poslužiteljima. Stoga kada izradite novi novčanik, **vi ste odgovorni za izradu i pohranu sigurnosne kopije**. ",
+    "HELP_0_Desc_2": "Izrada novog novčanika. ",
+    "HELP_0_Desc_3": "Izrada sigurnosne kopije novčanika. ",
+    "HELP_0_Desc_4": "Provjerite imate li pristup ovom novom novčaniku i jeste li ispravno spremili sve potrebne informacije. ",
+    "HELP_0_Desc_5": "Prebacite Ether u ovaj novi novčanik. ",
+    "HELP_1_Title": "1) Kako ću izraditi novi novčanik? ",
+    "HELP_1_Desc_1": "Otiđite na  \"Izrada novčanika\" stranicu. ",
+    "HELP_1_Desc_2": "Otiđite na  \"dodaj novčanik\" stranicu i izaberite \"Izrada novčanika\" ",
+    "HELP_1_Desc_3": "Unesite jaku lozinku. Ako mislite da čete ju zaboraviti pospremite je negdje na sigurno. Ova će vam lozinka biti potrebna za slanje transakcija. ",
+    "HELP_1_Desc_4": "Kliknite \"IZRADI\". ",
+    "HELP_1_Desc_5": "Vaš novčanik je sada izrađen. ",
+    "HELP_2a_Title": "Kako da sačuvan/izradim sigurnosnu kopiju moga novčanika? ",
     "HELP_2a_Desc_1": "You should always back up your wallet externally and in multiple physical locations - like on a USB drive and/or a piece of paper. ",
     "HELP_2a_Desc_2": "Save the address. You can keep it to yourself or share it with others. That way, others can transfer ether to you. ",
     "HELP_2a_Desc_3": "Save versions of the private key. Do not share it with anyone else. Your private key is necessary when you want to access your Ether to send it! There are 3 types of private keys ",
